--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,14 @@
   display: grid;
   grid-template-rows: auto max-content;
   grid-template-columns: 2fr 10fr;
-  grid-template-areas: 
-  "header header"
-  "nav mainContent";
+  grid-template-areas:
+    "header header"
+    "nav mainContent";
   grid-gap: 20px;
 }
 
+.app-wrapper-content {
+  grid-area: mainContent;
+  width: 800px;
+  height: 100%;
+}
