--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -13,4 +13,48 @@
 
 .messageList {}
 
-.messageList .message {}
+.messageList .message {
+    border-radius: 10px;
+    width: max-content;
+    height: max-content;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 2px solid black;
+}
+
+.newMessageArea {
+    display: inline-block;
+    width: 100%;
+    height: max-content;
+    border-radius: 20px;
+    background-color: white;
+    margin-top: 20px;
+  }
+  
+  .textarea{
+    height: 25px;
+    width: 60%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    vertical-align: middle;
+    font-size: 16px;
+    padding: 10px;
+    resize: none;
+  }
+  
+  .btn {
+    font-size: 20px;
+    vertical-align: middle;
+    height: 46px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;    
+    background-color: rgb(237, 237, 237);
+  }
+  
+  .btn:hover {
+    background-color: rgb(206, 206, 206);
+  }
