--- a/src/Components/ProfilePage/ProfilePage.module.css
+++ b/src/Components/ProfilePage/ProfilePage.module.css
@@ -46,10 +46,7 @@
   margin-left: 20px;
 }
 
-.btn {
-  margin-left: 700px;
-  font-size: 20px;
-}
+
 
 .header {
   margin-left: 20px;
@@ -77,6 +74,7 @@
 .content {
   margin-left: 30px;
   font-size: 25px;
+  width: 100%;
 }
 
 .like {
@@ -87,4 +85,44 @@
 }
 .like::before {
   content: '❤';
+}
+
+.newPostArea {
+  display: inline-block;
+  width: 100%;
+  height: max-content;
+  border-radius: 20px;
+  border: 1px solid rgb(193, 193, 193);
+  background-color: white;
+  margin-top: 20px;
+}
+
+.textArea{
+  display: inline;
+  position: relative;
+  height: 50px;
+  width: 75%;
+  margin: 20px;
+  border-radius: 10px;
+  vertical-align: middle;
+  font-size: 16px;
+  padding: 10px;
+  resize: none;
+}
+
+.btn {
+  display: inline;
+  font-size: 20px;
+  vertical-align: middle;
+  height: 50px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: 0.3s;
+  background-color: rgb(237, 237, 237);
+}
+
+.btn:hover {
+  transform: scale(0.95);
+  transition: 0.3s;
+  background-color: rgb(206, 206, 206);
 }
