--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
   font-size: 20px;
   background-color: rgb(237, 238, 240);
+  background-size: 100%;
   display: grid;
-  grid-template-rows: auto max-content;
+  grid-template-rows: auto 1fr;
   grid-template-columns: 2fr 10fr;
   grid-template-areas:
     "header header"
@@ -12,6 +13,6 @@
 
 .app-wrapper-content {
   grid-area: mainContent;
-  width: 800px;
+  width: 80%;
   height: 100%;
 }
