--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -45,3 +45,26 @@
     grid-area: 'info';
     margin-left: 20px;
 }
+
+.selectedPage {
+    font-weight: bold;
+    font-size: 30px;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
+
+.pageNumber {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    cursor: pointer;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
+
+.pageNumber:hover {
+    background-color: rgba(192, 192, 192, 0.507);
+}
